@@ -16,7 +16,11 @@
 
 package com.google.cloud.tools.crepecake.registry;
 
+import com.google.common.io.CharStreams;
 import java.io.IOException;
+import java.io.InputStreamReader;
+import java.nio.charset.StandardCharsets;
+import java.util.Arrays;
 import java.util.UUID;
 import org.junit.rules.ExternalResource;
 import org.junit.rules.TestRule;
@@ -38,20 +42,24 @@ public class LocalRegistry extends ExternalResource {
   protected void before() throws Throwable {
     // Runs the Docker registry.
     runCommand(
-        "docker run -d -p "
-            + port
-            + ":5000 --restart=always --name "
-            + containerName
-            + " registry:2");
+        "docker",
+        "run",
+        "-d",
+        "-p",
+        port + ":5000",
+        "--restart=always",
+        "--name",
+        containerName,
+        "registry:2");
 
     // Pulls 'busybox'.
-    runCommand("docker pull busybox");
+    runCommand("docker", "pull", "busybox");
 
     // Tags 'busybox' to push to our local registry.
-    runCommand("docker tag busybox localhost:" + port + "/busybox");
+    runCommand("docker", "tag", "busybox", "localhost:" + port + "/busybox");
 
     // Pushes 'busybox' to our local registry.
-    runCommand("docker push localhost:" + port + "/busybox");
+    runCommand("docker", "push", "localhost:" + port + "/busybox");
   }
 
   /** Stops the local registry. */
@@ -59,10 +67,10 @@ public class LocalRegistry extends ExternalResource {
   protected void after() {
     try {
       // Stops the registry.
-      runCommand("docker stop " + containerName);
+      runCommand("docker", "stop", containerName);
 
       // Removes the container.
-      runCommand("docker rm -v " + containerName);
+      runCommand("docker", "rm", "-v", containerName);
 
     } catch (InterruptedException | IOException ex) {
       throw new RuntimeException("Could not stop local registry fully: " + containerName, ex);
@@ -70,7 +78,22 @@ public class LocalRegistry extends ExternalResource {
   }
 
   /** Runs a command with naive tokenization by whitespace. */
-  private void runCommand(String command) throws IOException, InterruptedException {
-    new ProcessBuilder(command.split(" ")).start().waitFor();
+  private void runCommand(String... command) throws IOException, InterruptedException {
+    if (new ProcessBuilder(Arrays.asList(command)).start().waitFor() != 0) {
+      throw new IOException("Command '" + String.join(" ", command) + "' failed");
+    }
+  }
+
+  private void printLogs() throws IOException, InterruptedException {
+    Process process = Runtime.getRuntime().exec("docker logs registry");
+    try (InputStreamReader inputStreamReader =
+        new InputStreamReader(process.getInputStream(), StandardCharsets.UTF_8)) {
+      System.out.println(CharStreams.toString(inputStreamReader));
+    }
+    try (InputStreamReader inputStreamReader =
+        new InputStreamReader(process.getErrorStream(), StandardCharsets.UTF_8)) {
+      System.err.println(CharStreams.toString(inputStreamReader));
+    }
+    process.waitFor();
   }
 }
